added an anchor tag to the buttons

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <p>"Front-end developer and avid reader"</p>
     <div class="buttons_container">
         <div class="buttons">
-            <button>GitHub</button>
+           <a href=""><button>GitHub</button></a>
         </div>
         <div class="buttons">
-            <button>Frontend Mentor</button>
+            <a href=""><button>Frontend Mentor</button></a>
         </div>
         <div class="buttons">
-            <button>Linkedin</button>
+           <a href=""><button>Linkedin</button></a>
         </div>
         <div class="buttons">
-            <button>Twitter</button>
+            <a href=""><button>Twitter</button></a>
         </div>
         <div class="buttons">
-            <button>Instagram</button>
+           <a href=""><button>Instagram</button></a>
         </div>
     </div>
     </div>
